tests/snapshots/examples_fixtures/type_system__failing__78_hm_inline_call_no_runtime_fallback.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/78_hm_inline_call_no_runtime_fallback.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with String.

  --> examples/type_system/failing/78_hm_inline_call_no_runtime_fallback.flx:4:13
  |
4 |     let _x: String = (/(n: Int) -> n)(1)
  |             ^^^^^^
  |             ------ expected Int, found String
== stdout ==
<not executed>
